@@ -53,7 +53,7 @@ func (l *CheckFiles) Build() *CheckData {
 			"file":      {value: &l.paths, description: "Alias for path"},
 			"paths":     {value: &l.pathList, description: "A comma separated list of paths"},
 			"pattern":   {value: &l.pattern, description: "Pattern of files to search for"},
-			"max-depth": {value: &l.maxDepth, description: "Maximum recursion depth"},
+			"max-depth": {value: &l.maxDepth, description: "Maximum recursion depth. Default: no limit. '0' disables recursion, '1' includes first sub folder level, etc..."},
 			"timezone":  {value: &l.timeZoneStr, description: "Sets the timezone for time metrics (default is local time)"},
 		},
 		detailSyntax: "%(name)",
@@ -62,18 +62,18 @@ func (l *CheckFiles) Build() *CheckData {
 		emptySyntax:  "No files found",
 		emptyState:   CheckExitUnknown,
 		attributes: []CheckAttribute{
-			{name: "path", description: "Path of the file"},
-			{name: "access", description: "Last access time"},
-			{name: "age", description: "Seconds since file was last written"},
-			{name: "creation", description: "Date when file was created"},
-			{name: "file", description: "Name of the file"},
+			{name: "path", description: "Path to the file"},
 			{name: "filename", description: "Name of the file"},
-			{name: "name", description: "Name of the file"},
+			{name: "name", description: "Alias for filename"},
+			{name: "file", description: "Alias for filename"},
 			{name: "fullname", description: "Full name of the file including path"},
+			{name: "type", description: "Type of item (file or dir)"},
+			{name: "access", description: "Last access time"},
+			{name: "creation", description: "Date when file was created"},
 			{name: "size", description: "File size in bytes"},
-			{name: "type", description: "Type of item (file or directory)"},
 			{name: "written", description: "Date when file was last written to"},
 			{name: "write", description: "Alias for written"},
+			{name: "age", description: "Seconds since file was last written"},
 			{name: "line_count", description: "Number of lines in the files (text files)"},
 			{name: "total_bytes", description: "Total size over all files in bytes"},
 			{name: "total_size", description: "Total size over all files as human readable bytes"},
@@ -107,70 +107,95 @@ func (l *CheckFiles) Check(_ context.Context, _ *Agent, check *CheckData, _ []Ar
 
 	totalSize := int64(0)
 	for _, checkPath := range l.paths {
-		checkPath = strings.TrimSpace(checkPath)
+		if l.maxDepth == 0 {
+			break
+		}
+		checkPath = l.normalizePath(checkPath)
 
-		err := filepath.WalkDir(checkPath, func(path string, dir fs.DirEntry, err error) error {
-			filename := ""
-			fileEntry := map[string]string{}
-			if dir != nil {
-				filename = dir.Name()
-				fileEntry = map[string]string{
-					"path":     path,
-					"file":     filename,
-					"filename": filename,
-					"name":     filename,
-				}
-				if dir.IsDir() {
-					fileEntry["fullname"] = path
-					fileEntry["type"] = "directory"
-				} else {
-					fileEntry["fullname"] = filepath.Join(path, filename)
-					fileEntry["type"] = "file"
-				}
+		err := filepath.WalkDir(checkPath, func(path string, dirEntry fs.DirEntry, err error) error {
+			path = l.normalizePath(path)
+			filename := filepath.Base(path)
+			entry := map[string]string{
+				"file":     filename,
+				"filename": filename,
+				"name":     filename,
+				"path":     filepath.Dir(path),
+				"fullname": path,
+				"type":     "file",
+			}
 
-				if l.maxDepth != -1 && dir.IsDir() && int64(strings.Count(path, string(os.PathSeparator))) > l.maxDepth {
-					return fs.SkipDir
-				}
+			pathDepth := l.getDepth(path, checkPath)
+			log.Tracef("entry: %s (depth: %d)", path, pathDepth)
 
-				if dir.IsDir() {
+			if dirEntry != nil && dirEntry.IsDir() {
+				// start path is never returned
+				if path == checkPath {
 					return nil
 				}
+				entry["type"] = "dir"
+				if l.maxDepth != -1 && pathDepth > l.maxDepth {
+					log.Tracef("skipping dir, max-depth reached: %s", path)
+
+					return fs.SkipDir
+				}
+				if err != nil {
+					// silently skip failed sub folder
+					return fs.SkipDir
+				}
 			}
 
-			// check filter before checking errors, maybe it is skipped anyway
-			if !check.MatchMapCondition(check.filter, fileEntry, true) {
+			if l.maxDepth != -1 && pathDepth > l.maxDepth {
+				log.Tracef("skipping file, max-depth reached: %s", path)
+
 				return nil
 			}
 
-			if match, _ := filepath.Match(l.pattern, filename); !match {
+			// check filter and pattern before doing more expensive things
+			if match, _ := filepath.Match(l.pattern, entry["filename"]); !match {
 				return nil
 			}
+			if !check.MatchMapCondition(check.filter, entry, true) {
+				return nil
+			}
+
+			fileSize := int64(0)
+			defer func() {
+				if check.MatchMapCondition(check.filter, entry, false) {
+					check.listData = append(check.listData, entry)
+					totalSize += fileSize
+				}
+			}()
 
 			// check for errors here, maybe the file would have been filtered out anyway
 			if err != nil {
-				return err
+				entry["_error"] = strings.TrimPrefix(err.Error(), "lstat ")
+
+				return nil
 			}
 
-			fileInfo, err := dir.Info()
+			fileInfo, err := dirEntry.Info()
 			if err != nil {
-				return fmt.Errorf("could not stat file: %s", err.Error())
+				entry["_error"] = fmt.Sprintf("could not stat file: %s", err.Error())
+
+				return nil
 			}
 
+			fileSize = fileInfo.Size()
 			fileInfoSys, err := getCheckFileTimes(fileInfo)
 			if err != nil {
 				return fmt.Errorf("type assertion for fileInfo.Sys() failed")
 			}
 
-			fileEntry["access"] = fileInfoSys.Atime.In(timeZone).Format("2006-01-02 15:04:05 MST")
-			fileEntry["age"] = fmt.Sprintf("%d", time.Now().Unix()-fileInfoSys.Mtime.Unix())
-			fileEntry["creation"] = fileInfoSys.Ctime.In(timeZone).Format("2006-01-02 15:04:05 MST")
-			fileEntry["size"] = fmt.Sprintf("%d", fileInfo.Size())
-			fileEntry["write"] = fileInfoSys.Mtime.In(timeZone).Format("2006-01-02 15:04:05 MST")
-			fileEntry["written"] = fileInfoSys.Mtime.In(timeZone).Format("2006-01-02 15:04:05 MST")
+			entry["access"] = fileInfoSys.Atime.In(timeZone).Format("2006-01-02 15:04:05 MST")
+			entry["age"] = fmt.Sprintf("%d", time.Now().Unix()-fileInfoSys.Mtime.Unix())
+			entry["creation"] = fileInfoSys.Ctime.In(timeZone).Format("2006-01-02 15:04:05 MST")
+			entry["size"] = fmt.Sprintf("%d", fileInfo.Size())
+			entry["write"] = fileInfoSys.Mtime.In(timeZone).Format("2006-01-02 15:04:05 MST")
+			entry["written"] = fileInfoSys.Mtime.In(timeZone).Format("2006-01-02 15:04:05 MST")
 
 			if hasLineCount {
 				// check filter before doing even slower things
-				if !check.MatchMapCondition(check.filter, fileEntry, true) {
+				if !check.MatchMapCondition(check.filter, entry, true) {
 					return nil
 				}
 
@@ -178,13 +203,8 @@ func (l *CheckFiles) Check(_ context.Context, _ *Agent, check *CheckData, _ []Ar
 				if err != nil {
 					return fmt.Errorf("could not open file %s: %s", path, err.Error())
 				}
-				fileEntry["line_count"] = fmt.Sprintf("%d", utils.LineCounter(fileHandler))
+				entry["line_count"] = fmt.Sprintf("%d", utils.LineCounter(fileHandler))
 				fileHandler.Close()
-			}
-
-			if check.MatchMapCondition(check.filter, fileEntry, false) {
-				check.listData = append(check.listData, fileEntry)
-				totalSize += fileInfo.Size()
 			}
 
 			return nil
@@ -194,9 +214,11 @@ func (l *CheckFiles) Check(_ context.Context, _ *Agent, check *CheckData, _ []Ar
 		}
 	}
 
-	check.details = map[string]string{
-		"total_bytes": fmt.Sprintf("%d", totalSize),
-		"total_size":  humanize.IBytesF(uint64(totalSize), 2),
+	if len(check.listData) > 0 || check.emptySyntax == "" {
+		check.details = map[string]string{
+			"total_bytes": fmt.Sprintf("%d", totalSize),
+			"total_size":  humanize.IBytesF(uint64(totalSize), 2),
+		}
 	}
 
 	check.result.Metrics = append(check.result.Metrics,
@@ -219,4 +241,26 @@ func (l *CheckFiles) Check(_ context.Context, _ *Agent, check *CheckData, _ []Ar
 	)
 
 	return check.Finalize()
+}
+
+// normalizePath returns a trimmed path without spaces and trailing slashes or leading ./
+func (l *CheckFiles) normalizePath(path string) string {
+	path = strings.TrimSpace(path)
+	path = strings.TrimPrefix(path, "./")
+	path = strings.TrimPrefix(path, "."+string(os.PathSeparator))
+	path = strings.TrimSuffix(path, "/")
+	path = strings.TrimSuffix(path, string(os.PathSeparator))
+
+	return path
+}
+
+// getDepth returns path depth starting at 0 with the top folder
+func (l *CheckFiles) getDepth(path, basePath string) int64 {
+	if path == basePath {
+		return 0
+	}
+
+	subPath := strings.TrimPrefix(path, basePath)
+
+	return int64(strings.Count(subPath, string(os.PathSeparator)))
 }
