@@ -25,13 +25,17 @@ func TestCheckFiles(t *testing.T) {
 	assert.Equalf(t, CheckExitOK, res.State, "state OK")
 	assert.Contains(t, string(res.BuildPluginOutput()), "'count'=")
 
+	res = snc.RunCheck("check_files", []string{"path=.", "max-depth=0"})
+	assert.Equalf(t, CheckExitUnknown, res.State, "state Unknown")
+	assert.Contains(t, string(res.BuildPluginOutput()), "No files found")
+
 	res = snc.RunCheck("check_files", []string{"paths= ., t", "crit=count>10000", "max-depth=1"})
 	assert.Equalf(t, CheckExitOK, res.State, "state OK")
 	assert.Contains(t, string(res.BuildPluginOutput()), "'count'=")
 
 	res = snc.RunCheck("check_files", []string{"paths=noneex"})
 	assert.Equalf(t, CheckExitUnknown, res.State, "state Unknown")
-	assert.Contains(t, string(res.BuildPluginOutput()), "UNKNOWN - error walking directory noneex")
+	assert.Contains(t, string(res.BuildPluginOutput()), "UNKNOWN - noneex: no such file or directory")
 
 	res = snc.RunCheck("check_files", []string{"path=.", "filter=name eq 'check_files.go' and size gt 5K", "crit=count>0", "ok=count eq 0", "empty-state=ok"})
 	assert.Equalf(t, CheckExitCritical, res.State, "state Critical")
@@ -64,7 +68,7 @@ func TestCheckFilesNoPermission(t *testing.T) {
 
 	res = snc.RunCheck("check_files", []string{"path=" + tmpPath})
 	assert.Equalf(t, CheckExitOK, res.State, "state OK")
-	assert.Contains(t, string(res.BuildPluginOutput()), "OK - All 3 files are ok: (5.86 KiB) |'count'=3;;;0 'size'=6000B;;;0")
+	assert.Contains(t, string(res.BuildPluginOutput()), "OK - All 6 files are ok")
 
 	defer os.RemoveAll(tmpPath)
 
